plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.yangyoung'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.4'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // SWAGGER
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
    implementation 'io.springfox:springfox-swagger2:2.9.2'
    implementation 'io.springfox:springfox-swagger-ui:2.9.2'

    // POI
    implementation 'org.apache.poi:poi:5.2.4'
    implementation 'org.apache.poi:poi-ooxml:5.2.4'

    // 이메일
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // HTTP CLIENT
    implementation group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.13'

    //GOOGLE SPREADSHEET API
    implementation 'com.google.api-client:google-api-client:2.0.0'
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
    implementation 'com.google.apis:google-api-services-sheets:v4-rev20220927-2.0.0'
}

//profile 값이 없을 경우 dev 설정
ext.profile = (!project.hasProperty('profile') || !profile) ? 'dev' : profile

//profile 값에 따른 소스파일 변경 설정
sourceSets {
    main {
        resources {
            srcDirs "src/main/resources", "src/main/resources/${profile}"
        }
    }
}

// 중복 파일 처리 전략 추가
tasks.withType(Copy) {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

// 또는 특정 작업에만 설정
tasks.named('processResources') {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.register('printProfile') {
    doLast {
        println "Active Profile: ${project.profile}"
    }
}

bootRun {
    if (project.hasProperty('profile')) {
        args = ["--spring.profiles.active=${project.profile}"]
        finalizedBy printProfile
    }
}
//tasks.named('test') {
//    useJUnitPlatform()
//}
